--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.15.1",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "pnpm biome format --write ."
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,8 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4"
   }
 }
